[package]
name = "hado"
version = "0.1.1"
authors = ["Lucas David Traverso <lucas6246@gmail.com>"]
# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Monadic do notation using a macro"

# These URLs point to more information about the repository.
# documentation = ""
homepage = "https://github.com/ludat/hado-rs"
repository = "https://github.com/ludat/hado-rs"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["macro", "monad", "do"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "Apache-2.0"

[dependencies]
